@@ -16,8 +16,10 @@ collectd (4.1.3-1) experimental; urgency=low
   * Added collectd.overrides to override shlib-with-non-pic-code errors of
     plugins liked against static libraries which have not been linked with
     -fPIC.
+  * Removed debian/examples/myplugin.c and debian/examples/MyPlugin.pm - they
+    are included in the upstream sources now.
 
- -- Sebastian Harl <sh@tokkee.org>  Wed, 24 Oct 2007 23:25:04 +0200
+ -- Sebastian Harl <sh@tokkee.org>  Thu, 25 Oct 2007 00:54:13 +0200
 
 collectd (4.0.7-1) experimental; urgency=low
 
